--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: "Arial";
@@ -9,13 +10,17 @@ body
 }
 #cabecera
 {
-    background: #33A;
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
 }
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 
 #cabecera #tagline
 {
@@ -26,7 +31,7 @@ body
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -38,5 +43,6 @@ body
 }
 #post
 {
+    background: white;
     padding: 1em;
 }
