Modificacion en el archivo de estilos por un error anterior

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,13 +21,15 @@ body
 {
     width: 20px;
     vertical-align: middle;
-
+}
 #cabecera #tagline
 {
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8em;
 }
+
+
 #container
 {
     width: 70%;
